# ChangeLog for media-tv/xdtv
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-tv/xdtv/Attic/ChangeLog,v 1.17 2006/01/29 13:50:50 flameeyes Exp $

  29 Jan 2006; Diego Pettenò <flameeyes@gentoo.org>
  files/digest-xdtv-2.3.0, Manifest:
  Fix the digest, again.

  28 Jan 2006; Diego Pettenò <flameeyes@gentoo.org>
  files/digest-xdtv-2.3.0, Manifest:
  Fix digest as upstream changed the tarball.

*xdtv-2.3.0 (28 Jan 2006)

  28 Jan 2006; Diego Pettenò <flameeyes@gentoo.org>
  +files/xdtv-2.3.0-setXid.patch, +xdtv-2.3.0.ebuild:
  Version bump and ebuild cleanup; add missing xinerama dependency.

*xdtv-2.2.0-r2 (08 Jan 2006)

  08 Jan 2006; Diego Pettenò <flameeyes@gentoo.org>
  +files/xdtv-2.2.0-memcpy.patch, +files/xdtv-2.2.0-setXid.patch,
  +xdtv-2.2.0-r2.ebuild:
  Add patch from upstream to fix problems with memcpy.c and hardened (bug
  #115724). Add also patch to add bindnow flags to setXid executable.

  10 Dec 2005; Diego Pettenò <flameeyes@gentoo.org> xdtv-2.2.0-r1.ebuild:
  Made mostly modular xorg friendly; it won't be until font eclass is
  friendly, too.

  10 Dec 2005; Matthias Schwarzott <zzam@gentoo.org> xdtv-2.2.0-r1.ebuild:
  replaced dvb depend by linuxtv-dvb-headers

  05 Nov 2005; Diego Pettenò <flameeyes@gentoo.org> -xdtv-2.2.0.ebuild:
  Remove old version.

  31 Oct 2005; Diego Pettenò <flameeyes@gentoo.org> xdtv-2.2.0.ebuild,
  xdtv-2.2.0-r1.ebuild:
  Don't install INSTALL file.

  30 Oct 2005; Diego Pettenò <flameeyes@gentoo.org> xdtv-2.2.0.ebuild,
  xdtv-2.2.0-r1.ebuild:
  Remove divx4linux useflag.

  05 Oct 2005; Paul Varner <fuzzyray@gentoo.org> xdtv-2.2.0-r1.ebuild:
  Stable on x86. Bug# 104642

*xdtv-2.2.0-r1 (25 Jul 2005)

  25 Jul 2005; Diego Pettenò <flameeyes@gentoo.org> +xdtv-2.2.0-r1.ebuild:
  Added new theme (carbone) and bumped the versions of aqua theme and i18n
  support. Thanks to Sir Pingus <pingus_77@yahoo.fr> for the update.
