@@ -1,9 +1,9 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-MD5 ef82408a7731ff36a0c9dbc47c5b2423 ChangeLog 2842
-RMD160 95b9523cb55cef925d0813e6fea9af81165d9749 ChangeLog 2842
-SHA256 77daa6522c831baa80f3dd838731058ecd06256a44b12c05d15c089b3b65c763 ChangeLog 2842
+MD5 fd863d4bb997f3e7b6e1f2d676ed17e1 ChangeLog 2972
+RMD160 8fcd74cb5107ca351a5d640dce0b40c67ce75be5 ChangeLog 2972
+SHA256 105ba5ac0cd16ebcfe3db4dc6ed88ebf7c696e2e2b033d402db81f4589769443 ChangeLog 2972
 MD5 1e0e7da6d22eed35ae25e84d5b0dcad7 files/digest-xdtv-2.2.0-r1 1777
 RMD160 6339a0c25a7d00a13ffa578b0fd62c1061cf211c files/digest-xdtv-2.2.0-r1 1777
 SHA256 45c5a060e6eaadcb583bc590d8321afa55889cc537ec4a22a0b5bb93df09067e files/digest-xdtv-2.2.0-r1 1777
@@ -31,13 +31,13 @@ SHA256 8d23b4a7906695a1f5a62f72040db96f7fd0533c0439ce0dd69183ce12f7623f xdtv-2.2
 MD5 624e2e45a5120cc89fc572c4e01ef494 xdtv-2.2.0-r2.ebuild 7005
 RMD160 ba3ebeea64af5a0a1b3f138592d90f246d14858c xdtv-2.2.0-r2.ebuild 7005
 SHA256 ccae1d8fbfeb193d2f4158e7e496dc1b884ae80ec11ac58454a9042d6a8c68f9 xdtv-2.2.0-r2.ebuild 7005
-MD5 44e83e58b7bd18d7015d54acb6a56776 xdtv-2.3.0.ebuild 5066
-RMD160 c7cfad0f4b70ab4007e8005e01de38fc0e64cff9 xdtv-2.3.0.ebuild 5066
-SHA256 15c6f01cb96c4cf7732505016d775c29d9afe907f25fbf2f5800c27742acedc4 xdtv-2.3.0.ebuild 5066
+MD5 8d106d14c0d0b2acbe641f3a86c79130 xdtv-2.3.0.ebuild 5112
+RMD160 b50b15553855910ebafea9e5fd5514735f52d64e xdtv-2.3.0.ebuild 5112
+SHA256 478d64e3f7109c072f3b55ace087a5f03c77121fd31bc23a021bd4b4e994c969 xdtv-2.3.0.ebuild 5112
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.2 (GNU/Linux)
 
-iD8DBQFD3MhIAiZjviIA2XgRAnURAJ0YffoSMz0r8+lZ51MlxwybT3z08QCfS19G
-SmQGCmF90j54IS3DalRDWKo=
-=XqUk
+iD8DBQFD4mKqAiZjviIA2XgRAkELAKDOLIGFwZOb565Zfp3STHkPLtw97ACgw1lB
+6Lg7U3Ls4ldvYeixHrQ2YtQ=
+=eHFF
 -----END PGP SIGNATURE-----
